--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/core": "^7.17.3",
+    "@mantine/prism": "^6.0.22",
     "codemirror": "^5.65.19",
     "highlight.js": "^11.11.1",
     "highlightjs-line-numbers.js": "^2.9.0",
