--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ace-builds": "^1.39.1",
+    "dompurify": "^3.2.5",
+    "js-beautify": "^1.15.4",
     "react": "^19.0.0",
+    "react-ace": "^14.0.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
-    "react-syntax-highlighter": "^15.6.1",
     "suneditor": "^2.47.5",
     "suneditor-react": "^3.6.1"
   },
