--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/view": "^6.36.5",
-    "@uiw/codemirror-theme-github": "^4.23.10",
+    "@uiw/codemirror-theme-noctis-lilac": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
     "dompurify": "^3.2.5",
     "js-beautify": "^1.15.4",
@@ -20,7 +20,8 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.1",
     "suneditor": "^2.47.5",
-    "suneditor-react": "^3.6.1"
+    "suneditor-react": "^3.6.1",
+    "thememirror": "^2.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
