--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@simonwep/pickr": "^1.9.1",
     "@uiw/codemirror-theme-noctis-lilac": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
+    "@uiw/react-color": "^2.5.0",
     "dompurify": "^3.2.5",
     "js-beautify": "^1.15.4",
     "jscolor": "^0.3.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
+    "react-color-palette": "^7.3.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
