--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@uiw/codemirror-theme-noctis-lilac": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
     "@uiw/react-color": "^2.5.0",
+    "antd": "^5.24.8",
     "dompurify": "^3.2.5",
     "js-beautify": "^1.15.4",
     "jscolor": "^0.3.0",
