--- a/package.json
+++ b/package.json
@@ -12,24 +12,16 @@
   "dependencies": {
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/view": "^6.36.5",
-    "@simonwep/pickr": "^1.9.1",
     "@uiw/codemirror-theme-noctis-lilac": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
-    "@uiw/react-color": "^2.5.0",
-    "antd": "^5.24.8",
-    "dompurify": "^3.2.5",
+    "antd": "^5.25.1",
     "js-beautify": "^1.15.4",
-    "jscolor": "^0.3.0",
     "react": "^19.0.0",
-    "react-color": "^2.19.3",
-    "react-color-palette": "^7.3.0",
-    "react-colorful": "^5.6.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1",
     "suneditor": "^2.47.5",
-    "suneditor-react": "^3.6.1",
-    "thememirror": "^2.0.1"
+    "suneditor-react": "^3.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
